cluster/istio/virtual-services/frigate-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frigate
  namespace: istio-ingress
spec:
  hosts:
    - 'frigate.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway 
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 5000
            host: frigate.home.svc.cluster.local
          weight: 100
