cluster/istio/virtual-services/jellyfin-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jellyfin
  namespace: istio-ingress
spec:
  hosts:
    - 'jf.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway 
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 4040
            host: jellyfin.media.svc.cluster.local
          weight: 100
