cluster/istio/virtual-services/kopia-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kopia
  namespace: istio-ingress
spec:
  hosts:
    - 'kopia.${DOMAIN_2}'
  gateways:
    - istio-ingress/istio-private-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: kopia.services.svc.cluster.local
          weight: 100
