cluster/istio/virtual-services/navidrome-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: navidrome
  namespace: istio-ingress
spec:
  hosts:
    - 'music.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway 
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 4880
            host: navidrome.media.svc.cluster.local
          weight: 100
