cluster/istio/virtual-services/prometheus-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-ingress
spec:
  hosts:
    - 'prometheus.${DOMAIN_2}'
  gateways:
    - istio-ingress/istio-private-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 9090
            host: prometheus-prometheus.monitoring.svc.cluster.local
          weight: 100
