cluster/istio/virtual-services/vaultwarden-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vaultwarden
  namespace: istio-ingress
spec:
  hosts:
    - 'bitwarden.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway 
  http:
    - name: admin
      match:
        - uri:
            prefix: "/admin"
      directResponse:
        status: 403
        body:
          string: "{\"error\": \"thou shall not pass\"}"
      headers:
        response:
          set:
            content-type: "text/plain"
    - name: http
      match:
        - uri:
            prefix: "/"
        - uri:
            prefix: "/notifications/hub/negotiate"
      route:
        - destination:
            port:
              number: 8080
            host: vaultwarden.security.svc.cluster.local
          weight: 100
